--- a/_13_Su dung cac ham co san cua mang/Bai tap/Bài 12_đếm số ký tự số.html
+++ b/_13_Su dung cac ham co san cua mang/Bai tap/Bài 12_đếm số ký tự số.html
@@ -5,6 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-<s
+<script>
+    let arr=['chao','hello',1,34,1,'d','r','q',6,'dc',];
+    let count=0;
+    for (let j=0;j<arr.length;j++) {
+        if (typeof arr[j]=="number") {
+            count++;
+        }
+    }alert('Số phần tử dạng number là: '+count);
+
+</script>
 </body>
 </html>
